feat: Add editable expenses, insight upvote tracking, and group chat unread counts