@@ -29,21 +29,26 @@ public class DestinationInsightService {
     private final NotificationService notificationService;
 
     @Transactional(readOnly = true)
-    public List<DestinationInsightDTO> getInsightsForDestination(String destination) {
-        Instant cutoff = Instant.now().minus(30, ChronoUnit.DAYS);
+    public List<DestinationInsightDTO> getInsightsForDestination(String destination, String userEmail) {
+        Instant cutoff = Instant.now().minus(java.time.Duration.ofDays(30));
+        UUID userId = null;
+        if (userEmail != null) {
+            userId = userRepository.findByEmail(userEmail)
+                    .map(com.travyn.auth.entity.User::getId)
+                    .orElse(null);
+        }
+        UUID finalUserId = userId;
         return insightRepository.findActiveInsights(destination, cutoff)
                 .stream()
-                .map(this::mapToDTO)
-                .collect(Collectors.toList());
+                .map(insight -> mapToDTO(insight, finalUserId))
+                .toList();
     }
 
     public DestinationInsightDTO postInsight(String userEmail, String destination, DestinationInsightRequest request) {
-        User user = userRepository.findByEmail(userEmail)
+        com.travyn.auth.entity.User user = userRepository.findByEmail(userEmail)
                 .orElseThrow(() -> new IllegalArgumentException("User not found"));
 
-        // Anti-spam verification
-        boolean hasTraveled = tripRepository.hasApprovedTripToDestination(destination, user.getId());
-        if (!hasTraveled) {
+        if (!tripRepository.hasApprovedTripToDestination(destination, user.getId())) {
             throw new IllegalArgumentException("You can only post insights for destinations you have traveled to or are planning to travel to.");
         }
 
@@ -57,29 +62,59 @@ public class DestinationInsightService {
                 .build();
 
         insight = insightRepository.save(insight);
-        
+
         // Trigger Proactive Notifications if this is an ALERT
         if (request.getCategory() == com.travyn.destination.entity.InsightCategory.ALERT) {
-            List<User> activeUsers = tripRepository.findUsersCurrentlyInDestination(destination);
-            for (User u : activeUsers) {
+            List<com.travyn.auth.entity.User> activeUsers = tripRepository.findUsersCurrentlyInDestination(destination);
+            for (com.travyn.auth.entity.User u : activeUsers) {
                 if (!u.getId().equals(user.getId())) {
                     String message = "🚨 New traveler alert for your current destination (" + destination + ")";
-                    notificationService.notifyUser(u.getId(), message, NotificationType.DESTINATION_ALERT, insight.getId());
+                    try {
+                        notificationService.notifyUser(u.getId(), message, NotificationType.DESTINATION_ALERT, insight.getId());
+                    } catch (Exception ignored) {}
                 }
             }
         }
-        
-        return mapToDTO(insight);
+
+        return mapToDTO(insight, user.getId());
     }
 
-    public void upvoteInsight(String insightId) {
+    public DestinationInsightDTO editInsight(String insightId, String userEmail, DestinationInsightRequest request) {
+        com.travyn.auth.entity.User user = userRepository.findByEmail(userEmail)
+                .orElseThrow(() -> new IllegalArgumentException("User not found"));
+                
         DestinationInsight insight = insightRepository.findById(UUID.fromString(insightId))
                 .orElseThrow(() -> new IllegalArgumentException("Insight not found"));
-        insight.setUpvotes(insight.getUpvotes() + 1);
+                
+        if (!insight.getAuthorId().equals(user.getId())) {
+            throw new IllegalArgumentException("You can only edit your own insights.");
+        }
+        
+        insight.setCategory(request.getCategory());
+        insight.setContent(request.getContent());
+        insight = insightRepository.save(insight);
+        
+        return mapToDTO(insight, user.getId());
+    }
+
+    public void upvoteInsight(String insightId, String userEmail) {
+        com.travyn.auth.entity.User user = userRepository.findByEmail(userEmail)
+                .orElseThrow(() -> new IllegalArgumentException("User not found"));
+        DestinationInsight insight = insightRepository.findById(UUID.fromString(insightId))
+                .orElseThrow(() -> new IllegalArgumentException("Insight not found"));
+        
+        if (insight.getUpvotedBy().contains(user.getId())) {
+            insight.getUpvotedBy().remove(user.getId());
+            insight.setUpvotes(insight.getUpvotedBy().size());
+        } else {
+            insight.getUpvotedBy().add(user.getId());
+            insight.setUpvotes(insight.getUpvotedBy().size());
+        }
+        
         insightRepository.save(insight);
     }
 
-    private DestinationInsightDTO mapToDTO(DestinationInsight insight) {
+    private DestinationInsightDTO mapToDTO(DestinationInsight insight, UUID currentUserId) {
         return DestinationInsightDTO.builder()
                 .id(insight.getId())
                 .destination(insight.getDestination())
@@ -89,6 +124,7 @@ public class DestinationInsightService {
                 .category(insight.getCategory())
                 .content(insight.getContent())
                 .upvotes(insight.getUpvotes())
+                .isUpvotedByMe(currentUserId != null && insight.getUpvotedBy().contains(currentUserId))
                 .createdAt(insight.getCreatedAt())
                 .build();
     }
